--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
-<!DOCTYPE html>
-
+<!Doctype html>
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
-
-</body>
+  <head>
+    <title>ha</title>
+    <link rel="stylesheet" href="./main.css"/>
+  </head>
+  <body>
+   <div class="esfera"></div>
+    <div class="video-container">
+      <video src="video/video_0.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_1.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_2.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_3.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_4.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_5.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_6.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_7.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_8.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_9.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_10.mp4" width="320" height="202" autoplay loop></video>
+      <video src="video/video_11.mp4" width="320" height="202" autoplay loop></video>
+    </div>
+  </body>
 </html>
